--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.20",
     "antd": "^5.18.1",
     "babel-plugin-import": "^1.13.8",
     "boxicons": "^2.1.4",
+    "emoji-mart": "^5.6.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "wavesurfer.js": "^7.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
